--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - "5601:5601" # kibana port
       - "9200:9200" # elasticsearch port
       - "5044:5044" # beats port
-      - "5000:5000" # json port
+      - "5000:5000" # tcp port
