--- a/conf/tpc-json.conf
+++ b/conf/tpc-json.conf
@@ -1,9 +1,15 @@
 input {
     tcp {
         port => 5000
-        codec => "json"
+        codec => "json_lines"
         type => "json"
     }
+}
+
+filter {
+  mutate {
+    convert => { "elapsedInMs" => "integer" }
+  }
 }
 
 output {
