Status as integer

--- a/conf/filebeat.conf
+++ b/conf/filebeat.conf
@@ -8,7 +8,10 @@ input {
 
 filter {
   mutate {
-    convert => { "elapsedInMs" => "integer" }
+    convert => {
+        "elapsedInMs" => "integer"
+        "status" => "integer"
+    }
   }
 }
 
