--- a/conf/tpc-json.conf
+++ b/conf/tpc-json.conf
@@ -8,9 +8,13 @@ input {
 
 filter {
   mutate {
-    convert => { "elapsedInMs" => "integer" }
+    convert => {
+        "elapsedInMs" => "integer"
+        "status" => "integer"
+    }
   }
 }
+
 
 output {
     elasticsearch {
