--- a/conf/tpc-json.conf
+++ b/conf/tpc-json.conf
@@ -19,7 +19,7 @@ filter {
 output {
     elasticsearch {
         hosts => ["localhost"]
-        index => "poc-%{serviceName}-%{+yyyy.MM.dd}"
+        index => "json-%{serviceName}-%{+yyyy.MM.dd}"
     }
     stdout {
         codec => rubydebug
