--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
     ports:
       - "5601:5601" # kibana port
       - "9200:9200" # elasticsearch port
-      - "5044:5044" # beats port
-      - "5000:5000" # tcp port
+      - "5044:5044" # beats json port
+      - "5045:5045" # beats plain port
+      - "5000:5000" # tcp json port
